--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -212,11 +212,11 @@ h6,
 /*** Hero Header ***/
 .hero-header {
     background:
-        url(../assets/images/bg-dot.png),
-        url(../assets/images/bg-dot.png),
-        url(../assets/images/bg-round.png),
-        url(../assets/images/bg-tree.png),
-        url(../assets/images/bg-bottom-hero.png);
+        url(../images/bg-dot.png),
+        url(../images/bg-dot.png),
+        url(../images/bg-round.png),
+        url(../images/bg-tree.png),
+        url(../images/bg-bottom-hero.png);
     background-position:
         10px 10px,
         bottom 190px right 10px,
@@ -297,13 +297,13 @@ h6,
     align-items: center;
     justify-content: center;
     color: var(--light);
-    background: url(../assets/images/icon-shape-secend.png) center center no-repeat;
+    background: url(../images/icon-shape-secend.png) center center no-repeat;
     transition: .5s;
 }
 
 .service-item:hover .service-icon {
     color: var(--primary);
-    background: url(../assets/images/icon-shape-white.png);
+    background: url(../images/icon-shape-white.png);
 }
 
 .service-item h5,
@@ -351,8 +351,8 @@ h6,
 .newsletter,
 .testimonial {
     background:
-        url(../assets/images/bg-top.png),
-        url(../assets/images/bg-bottom.png);
+        url(../images/bg-top.png),
+        url(../images/bg-bottom.png);
     background-position:
         left top,
         right bottom;
@@ -471,7 +471,7 @@ h6,
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(../assets/images/icon-shape-white.png) center center no-repeat;
+    background: url(../images/icon-shape-white.png) center center no-repeat;
     border: none;
     transition: .5s;
     opacity: 0;
@@ -486,7 +486,7 @@ h6,
 
 /*** Footer ***/
 .footer {
-    background: url(../assets/images/footer.png) center center no-repeat;
+    background: url(../images/footer.png) center center no-repeat;
     background-size: contain;
 }
 
