--- a/frontend/src/components/customers/customers.scss
+++ b/frontend/src/components/customers/customers.scss
@@ -1,70 +1,157 @@
 $primary2: #00204a;
 
-.owl-nav {
-    display: flex;
-    justify-content: center;
-    margin-top: 45px;
+$color_1: #2a2a2a;
+$color_2: #afafaf;
+$color_3: #fff;
+$color_4: #4b8ef1;
 
-    .owl-prev,
-    .owl-next {
-        width: 55px;
-        height: 55px;
-        background-color: #FFFFFF;
-        color: #000000;
-        outline: none;
-        bottom: 0px;
-        font-size: 24px;
-        box-shadow: 0 0 5px 0 rgba($color: #000000, $alpha: 0.25);
-
-        &:hover {
-            color: var(--primary);
+.the-clients {
+    margin-top: 130px;
+    .section-heading {
+        text-align: center;
+        margin-bottom: 80px;
+        p {
+            margin-top: 10px;
+            margin-left: 18%;
+            margin-right: 18%;
         }
     }
-}
-
-.box
-{
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    margin: 15px;
-    .img-box
-    {
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        width: 100px;
-        margin-bottom: -50px;
-        margin-left: 25px;
+    .naccs {
         position: relative;
-        img
-        {
-            border-radius: 100%;
+        .menu {
+            div {
+                color: $color_3;
+                font-size: 15px;
+                margin-bottom: 15px;
+                margin-top: 15px;
+                text-align: left;
+                padding: 0px 15px;
+                cursor: pointer;
+                position: relative;
+                transition: 1s all cubic-bezier(0.075, 0.82, 0.165, 1);
+            }
+            div.active {
+                h4 {
+                    color: $color_4;
+                }
+                i {
+                    color: $color_4;
+                }
+                span.rating {
+                    color: $color_4;
+                }
+                .thumb {
+                    color: $color_4;
+                }
+            }
         }
     }
-    .detail-box
-    {
-        background-color: #ffffff;
-        -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
-        box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
-        padding: 75px 25px 25px 25px;
-        .client_id
-        {
-            display: flex;
-            -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-            justify-content: space-between;
-            i{
-                color: var(--primary);
-                margin-bottom: 10px;
+    ul.nacc {
+        position: relative;
+        min-height: 100%;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+        li {
+            opacity: 0;
+            transform: translateX(-50px);
+            position: absolute;
+            list-style: none;
+            transition: 1s all cubic-bezier(0.075, 0.82, 0.165, 1);
+            width: 100%;
+        }
+        li.active {
+            transition-delay: 0.3s;
+            position: relative;
+            z-index: 2;
+            opacity: 1;
+            transform: translateX(0px);
+        }
+    }
+    .nacc {
+        .thumb {
+            .client-content {
+                img {
+                    width: 76px;
+                    height: 62px;
+                }
+                padding: 60px 30px;
+                background-image: url(../../assets/images/client-bg.png);
+                background-size: cover;
+                border-radius: 50px;
+                width: 100%;
+                height: auto;
+                background-repeat: no-repeat;
+                p {
+                    color: $color_3;
+                    font-weight: 500;
+                    font-size: 16px;
+                    font-style: italic;
+                    margin-top: 30px;
+                }
+            }
+            .down-content {
+                margin-top: 30px;
+                img {
+                    width: 170px;
+                    height: 170px;
+                    border-radius: 50%;
+                    display: inline;
+                }
+                .right-content {
+                    display: inline-block;
+                    margin-left: 20px;
+                    h4 {
+                        font-size: 20px;
+                        font-weight: 700;
+                        margin-bottom: 15px;
+                    }
+                    span {
+                        color: $color_1;
+                    }
+                }
             }
         }
     }
 }
+.menu {
+    .thumb {
+        h4 {
+            margin-bottom: 0px;
+            font-size: 20px;
+            color: $color_1;
+        }
+        span.date {
+            display: inline-block;
+            margin-top: 0px;
+            color: $color_2;
+        }
+        span.category {
+            font-weight: 700;
+            color: $color_2;
+        }
+        span.rating {
+            font-weight: 700;
+            color: $color_2;
+        }
+        i {
+            color: $color_2;
+        }
+    }
+}
 
+html[dir="rtl"]
+{
+    .down-content
+    {
+        .right-content
+        {
+            margin-right: 20px !important;
+        }
+    }
+}
+em
+{
+    color: var(--primary);
+}
